--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ec2-3-229-8-233.compute-1.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=yody
 DB_USERNAME=root
@@ -22,9 +22,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=ec2-3-229-8-233.compute-1.amazonaws.com
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=ec2-3-229-8-233.compute-1.amazonaws.com
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -60,7 +60,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RABBITMQ_HOST=127.0.0.1
+RABBITMQ_HOST=ec2-3-229-8-233.compute-1.amazonaws.com
 RABBITMQ_PORT=5672
 RABBITMQ_USER='guest'
 RABBITMQ_PASSWORD='guest'
