--- a/.env
+++ b/.env
@@ -67,10 +67,10 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RABBITMQ_HOST=jellyfish.rmq.cloudamqp.com
-RABBITMQ_PORT=1883
-RABBITMQ_USER='bzwrwpaj:bzwrwpaj'
-RABBITMQ_PASSWORD='tcOR1tanD9FJTWgKmcp2iSj306nb4Q9j'
+RABBITMQ_HOST=127.0.0.1
+RABBITMQ_PORT=5672
+RABBITMQ_USER='guest'
+RABBITMQ_PASSWORD='guest'
 RABBITMQ_VHOST='/'
 
 MERCHANT_NAME=yody
