--- a/.env
+++ b/.env
@@ -75,7 +75,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RABBITMQ_HOST=jellyfish.rmq.cloudamqp.com
 RABBITMQ_PORT=1883
-RABBITMQ_USER='bzwrwpaj:bzwrwpaj'
+RABBITMQ_USER='bzwrwpaj'
 RABBITMQ_PASSWORD='tcOR1tanD9FJTWgKmcp2iSj306nb4Q9j'
 RABBITMQ_VHOST='/'
 
