--- a/.env
+++ b/.env
@@ -15,11 +15,11 @@ LOG_LEVEL=debug
 #DB_USERNAME=root
 #DB_PASSWORD=
 
-REDIS_HOST=redis-16683.c257.us-east-1-3.ec2.cloud.redislabs.com
+REDIS_HOST='redis-16683.c257.us-east-1-3.ec2.cloud.redislabs.com'
 REDIS_PASSWORD=rftJGaW5TZI1QOLhsILxB2mAzVI0WccE
 REDIS_PORT=16683
 
-RABBITMQ_HOST=https://jellyfish.rmq.cloudamqp.com
+RABBITMQ_HOST='https://jellyfish.rmq.cloudamqp.com'
 RABBITMQ_PORT=1883
 RABBITMQ_USER='bzwrwpaj'
 RABBITMQ_PASSWORD='tcOR1tanD9FJTWgKmcp2iSj306nb4Q9j'
